# nendo_plugin_voicegen_styletts2

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  setup.py
src/nendo_plugin_voicegen_styletts2/: __init__.py  config.py  plugin.py  utils.py
src/nendo_plugin_voicegen_styletts2/styletts2/: api.py  models.py  text_utils.py  utils.py
src/nendo_plugin_voicegen_styletts2/styletts2/Modules/: discriminators.py  hifigan.py  istftnet.py
src/nendo_plugin_voicegen_styletts2/styletts2/Modules/diffusion/: diffusion.py  modules.py  sampler.py  utils.py
src/nendo_plugin_voicegen_styletts2/styletts2/Utils/ASR/: layers.py  models.py
tests/: test_nendo_plugin_voicegen_styletts2.py
